--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.dart linguist-detectable=false
+*.c++ linguist-detectable=false
+*.cmake linguist-detectable=false
+*.ruby linguist-detectable=false
+*.swift linguist-detectable=false
