--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.cmake linguist-detectable=false
 *.ruby linguist-detectable=false
 *.swift linguist-detectable=false
+*.c linguist-detectable=false
