--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.c++ linguist-detectable=false
+*.cpp linguist-detectable=false
 *.cmake linguist-detectable=false
 *.ruby linguist-detectable=false
 *.swift linguist-detectable=false
