--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 *.cpp linguist-detectable=false
+*.cc linguist-detectable=false
+*.h linguist-detectable=false
 *.cmake linguist-detectable=false
 *.ruby linguist-detectable=false
 *.swift linguist-detectable=false
