--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.swift linguist-detectable=false
 *.c linguist-detectable=false
 *Podfile linguist-detectable=false
+*.html linguist-detectable=false
